# aule

./: .gitignore  README.MD  pyproject.toml
aule/: __init__.py  abstract.py  universal.py
aule/species/: __init__.py  list_evo.py  tensor_evo.py
examples/: fitness_comparison.py  hello_world.py
